只修改最大内存到8G